--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "bootstrap": "^5.2.3",
     "express": "^4.18.2",
+    "http": "^0.0.1-security",
     "nodemon": "^2.0.20",
     "ws": "^8.12.0"
   }
